--- a/main.html
+++ b/main.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Box Model Demo</title>
+  <style>
+    /* Apply styles to the box */
+    .box {
+      width: 300px;
+      background-color: lightblue;
+      border: 15px solid blue;
+      padding: 50px;
+      margin: 20px;
+    }
+
+    /* Apply styles to the text inside the box */
+    .box p {
+      margin: 0; /* Remove default margin for the paragraph */
+    }
+  </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+  <!-- Create a div element to represent the box -->
+  <div class="box">
+    <!-- Insert the specified text inside the box -->
+    <p>This is a demo of box model, try to replicate this box model in Html &amp; Css and pass all the test cases.</p>
+  </div>
 </body>
-
 </html>
