--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
   <!-- Create a div element to represent the box -->
   <div class="box">
     <!-- Insert the specified text inside the box -->
-    <p>This is a demo of box model, try to replicate this box model in Html &amp; Css and pass all the test cases.</p>
+    <p>This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.</p>
   </div>
 </body>
 </html>
